Complete example and add maven/ide instructions